update template list user

--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -46,9 +46,10 @@ table.table tr th {
 table.table tr td {
     color: #737373;
     font-size: 0.9em;
+    vertical-align: middle;
 }
 
-.pagination{
+.pagination {
     justify-content: center;
     align-items: center;
 }
