--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -53,3 +53,8 @@ table.table tr td {
     justify-content: center;
     align-items: center;
 }
+
+.form-group label{
+    margin-bottom: 0px;
+    font-weight: bold;
+}
